--- a/source/archives/index.html.haml
+++ b/source/archives/index.html.haml
@@ -1,12 +1,12 @@
 ---
-title: Архив Технического Блога
+title: Архив медитативных практик
 footer: false
 blog: blog
 ---
 %div
   %article{role: "article"}
     %header
-      %h1.entry-title Архив Технического Блога
+      %h1.entry-title= current_page.data['title']
     #blog-archives
       - blog('blog').articles.group_by { |a| a.date.year }.each do |year, articles|
         %h2= year
