Add link to github

--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -78,6 +78,10 @@
         %span.credit
           Сделано с помощью
           %a{href: "http://middlemanapp.com/"} Middleman
+        \-
+        %span
+          Исходники сайта
+          %a{href: "https://github.com/evtuhovich/devops-meditation"} на GitHub
     = yield_content :disqus
     #fb-root
     :javascript
